erDiagram
    voice_profiles {
        uuid id PK
        varchar name
        text provider
        text provider_voice_id
        varchar language_code
        text gender
    }
    chat_threads {
        uuid id PK
        uuid owner_user_id
        varchar title
        text status
    }
    chat_messages {
        uuid id PK
        uuid thread_id FK
        text role
        text text_content
        uuid plan_id FK
    }
    production_plans {
        uuid id PK
        uuid owner_user_id
        uuid thread_id FK
        varchar series_title
        text status
    }
    production_plan_hosts {
        uuid id PK
        uuid plan_id FK
        uuid voice_profile_id FK
        varchar display_name
        text role
    }
    production_plan_episode_drafts {
        uuid id PK
        uuid plan_id FK
        integer episode_number
        varchar title
        text status
    }
    generation_jobs {
        uuid id PK
        uuid plan_id FK
        uuid episode_draft_id FK
        text job_type
        text status
    }
    shows {
        uuid id PK
        uuid owner_user_id
        varchar title
        citext slug
        text publish_status
    }
    episodes {
        uuid id PK
        uuid show_id FK
        varchar title
        text audio_url
        integer duration_seconds
        text publish_status
    }
    show_hosts {
        uuid id PK
        uuid show_id FK
        varchar display_name
        text role
        text persona_type
    }
    episode_segments {
        uuid id PK
        uuid episode_id FK
        integer segment_index
        integer start_ms
        integer end_ms
        text text_content
    }
    episode_bookmarks {
        uuid user_id PK
        uuid episode_id PK
    }
    episode_assets {
        uuid id PK
        uuid episode_id FK
        text asset_type
        text url
    }

    chat_threads ||--o{ chat_messages : contains
    chat_threads ||--o| production_plans : generates
    production_plans ||--o{ production_plan_hosts : has
    production_plans ||--o{ production_plan_episode_drafts : has
    production_plans ||--o{ generation_jobs : triggers
    voice_profiles ||--o{ production_plan_hosts : voices
    shows ||--o{ episodes : contains
    shows ||--o{ show_hosts : has
    episodes ||--o{ episode_segments : has
    episodes ||--o{ episode_assets : has
    episodes ||--o{ episode_bookmarks : bookmarked
